# tg_lab_test

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  ws.html  ТЗ Backend Python developer.docx.md
app/: config.py  db.py  main.py
app/api/: auth.py  dependencies.py  expeditions.py  ws.py
app/migrations/: env.py
app/migrations/versions/: a48e6bfe183c_init.py  a9a4c50402d5_add_hashed_password_to_user.py
app/models/: expedition.py  expedition_member.py  user.py
app/schemas/: expedition.py  expedition_member.py  user.py
app/services/: auth.py  websocket.py
tests/: conftest.py  test_auth.py  test_expeditions.py
